--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ rapidfuzz>=3.9.7
 pydantic>=2.8.2
 PyYAML>=6.0.1
 Pillow>=10.3.0
-openpyxl>=3.1.2
+openpyxl>=3.1.2           # <-- to read .xlsx (fixes your error)
+streamlit-plotly-events>=0.0.6  # <-- click-to-drill on charts
+
